--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # MongoDB connection URI
-MONGODB_URI=""
+VITE_MONGODB_URI=""
 
 # MongoDB database name
-MONGODB_DB_NAME=""
+VITE_MONGODB_DB_NAME=""
