Add register and login services

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,9 @@ VITE_MONGODB_URI=""
 
 # MongoDB database name
 VITE_MONGODB_DB_NAME=""
+
+# Refresh token secret
+VITE_REFRESH_SECRET=""
+
+# Access token secret
+VITE_ACCESS_SECRET=""
