--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
         "@hono/node-server": "^1.19.6",
         "@jderstd/express": "~0.1.0",
         "@jderstd/hono": "~0.6.0",
+        "@node-rs/argon2": "^2.0.2",
         "express": "^5.1.0",
         "hono": "^4.10.4",
+        "jose": "^6.1.1",
         "mongodb": "^6.20.0",
         "srvx": "~0.9.5",
         "ts-vista": "~0.2.2"
