--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,22 @@
         "@hono/node-server": "^1.19.6",
         "@jderstd/express": "~0.1.0",
         "@jderstd/hono": "~0.6.0",
+        "@jderstd/hono-openapi": "~0.1.0",
         "@node-rs/argon2": "^2.0.2",
+        "@scalar/hono-api-reference": "~0.9.24",
         "express": "^5.1.0",
         "hono": "^4.10.4",
         "jose": "^6.1.1",
         "mongodb": "^6.20.0",
         "srvx": "~0.9.5",
-        "ts-vista": "~0.2.2"
+        "ts-vista": "~0.2.2",
+        "zod": "^4.1.12"
     },
     "devDependencies": {
         "@hono/vite-build": "^1.7.0",
         "@hono/vite-dev-server": "~0.23.0",
         "@types/express": "^5.0.3",
+        "quansync": "~0.2.11",
         "vite": "catalog:dep",
         "vite-tsconfig-paths": "catalog:dep"
     }
