--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
+        "target": "es2024",
+        "module": "esnext",
         "outDir": "./dist",
         "baseUrl": ".",
         "paths": {
