Add OpenAPI client

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,6 +22,9 @@
             ],
             "#/app/*": [
                 "./.react-router/types/src/app/*"
+            ],
+            "#/openapi": [
+                "./.openapi/index"
             ]
         }
     },
