--- a/biome.json
+++ b/biome.json
@@ -2,5 +2,10 @@
     "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
     "extends": [
         "@apst/biome"
-    ]
+    ],
+    "files": {
+        "includes": [
+            "!client/.openapi/**/*"
+        ]
+    }
 }
