--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "react-router": "7.9.4"
     },
     "devDependencies": {
+        "@hey-api/openapi-ts": "~0.87.4",
         "@react-router/dev": "7.9.4",
         "@react-router/fs-routes": "7.9.4",
         "@react-router/serve": "^7.9.4",
