--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,35 +2,38 @@
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
         "lib": [
-            "ESNext",
-            "DOM",
-            "DOM.Iterable"
+            "dom",
+            "dom.iterable",
+            "esnext"
         ],
-        "types": [
-            "vite/client",
-            "@vitejs/plugin-rsc/types"
-        ],
-        "jsx": "react-jsx",
-        "rootDirs": [
-            ".",
-            "./.react-router/types"
+        "noEmit": true,
+        "incremental": true,
+        "plugins": [
+            {
+                "name": "next"
+            }
         ],
         "baseUrl": ".",
         "paths": {
             "#/*": [
-                "./app/*"
+                "./src/*"
             ],
-            "#/app/*": [
-                "./.react-router/types/src/app/*"
+            "#/public/*": [
+                "./public/*"
             ],
             "#/openapi": [
-                "./.openapi/index"
+                "./.openapi/index.ts"
             ]
         }
     },
     "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        "./.react-router/types/**/*"
+        "./**/*.ts",
+        "./**/*.tsx",
+        "./.next/types/**/*.ts",
+        "./next-env.d.ts",
+        ".next/types/**/*.ts"
+    ],
+    "exclude": [
+        "./node_modules/**/*"
     ]
 }
